# finm-33200-group7

./: .env.example  .gitignore  AI_USAGE.md  CLAUDE.md  GIT_CHEATSHEET.md  README.md  dodo.py  environment.yml  proposal_for_submission.md  pull_data.py  pyproject.toml  requirements.txt  workplan.md
data/Transcript/: Amazon_2018_2022.csv  CocaCola_2018_2022.csv  EliLilly_2018_2022.csv  Tesla_2018_2022.csv
data/autochecker/: 51_full_run_verdict_autochecker-v1.csv  51_full_run_verdict_autochecker-v1.jsonl  55_full_run_verdict_autochecker-v1.csv  55_full_run_verdict_autochecker-v1.jsonl
data/claims/: 51pilot_2.csv  pilot_claims.csv  pilot_gpt55.csv  pilot_local.csv
data/eval/: per_claim_results.csv
data/gold/: README.md  pilot_tsla.jsonl  template.jsonl
data/profiles/: AMZN_profile.csv  KO_profile.csv  LLY_profile.csv  TSLA_profile.csv  dashboard.html  summary.csv
data/stub/: canned_excerpts.json  example_claim.json  smoke_0.json  smoke_1.json  smoke_2.json  smoke_3.json  smoke_4.json
data/verdicts/: agent_screenfalse_55.jsonl  combined_55_final.csv
docs/: architecture.md  autolabel-eval-summary.md  autolabel-gold-eval-design.md  citation-discipline-design.md  future_optimizations.md  labeling-helper-design.md  labeling_rubric.md  pipeline.md  project_outline.md  verdict-agent-discipline-design.md  verifier-iteration-3-eval-prep.md
notebooks/: results.ipynb
src/: data_pull.py
src/autochecker/: __init__.py  compustat.py  llm.py  prompts.py  run.py  schema.py  screen.py  verify.py
src/extractor/: __init__.py  batch_run.py  extract.py  horizon.py  output.py  prompt.py  prompts.py  provenance.py  reader.py  run.py  schema.py
src/extractor_2/: batch_run.py  extract.py  for_verifier.py  horizon.py  loader.py  output.py  prompts.py  run.py  (+3 more)
tests/: conftest.py  test_agent_cache.py  test_agent_discipline.py  test_agent_format.py  test_agent_retry.py  test_autolabel.py  test_corpus.py  test_eval.py  test_extractor_context.py  test_extractor_dedupe.py  test_extractor_filter.py  test_extractor_horizon.py  test_extractor_loader.py  test_extractor_output.py  test_extractor_provenance.py  test_extractor_provenance_bk.py  test_extractor_reader.py  test_extractor_schema.py  test_extractor_schema_bk.py  test_extractor_smoke.py  test_gold.py  test_index.py  test_label.py  test_model_resolver.py  test_schema.py  test_schemas_package.py  test_smoke.py  test_tools.py  test_verifier_schema_shim.py  test_verify_live.py
(+41 files in other folders)
