[project]
name = "verifier"
version = "0.1.0"
description = "Verification agent for forward-looking claims (FINM 33200 Group 7)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "deepagents>=0.3.12,<0.4",
    "langchain>=1.3,<2",
    "langchain-openai>=1.2,<2",
    "langchain-community>=0.3,<1",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openai>=1.30",
    "wrds>=3.5",
    "faiss-cpu>=1.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tiktoken>=0.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pip-tools>=7.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["data_pull"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: tests that make live OpenAI API calls (cost money, ~10-30s). Run with `pytest -m live`.",
]
